# hrat

./: .gitignore  Cargo.toml  README.md  bundle.md  bundle.py  flake.nix  server.py  server_stream.py
client/: .gitignore  Cargo.toml  README.md
client/src/: dispatcher.rs  main.rs  router.rs  utils.rs
client/src/actors/: audio.rs  chat.rs  file_system.rs  keylogger.rs  mod.rs  remote_cmd.rs  remote_code_execution.rs  remote_screen.rs  task_manager.rs  trolling.rs  webcam.rs
client/src/handlers/: api_scheme.md  audio.rs  chat.rs  file_system.rs  func.rs  keylogger.rs  mod.rs  remote_cmd.rs  remote_code_execution.rs  remote_screen.rs  task_manager.rs  trolling.rs  webcam.rs
host/: connection_manager.py  flake.nix  main.py  stream.py
host/routes/: builder.py  ui.py  websocket.py
host/static/: remote_screen.js  webcam.js
host/templates/: builder.html  controls.html  index.html
host/templates/components/: chat.html  filesys.html  keylogger.html  remote_screen.html  remote_shell.html  super.html  task_manager.html  trolling.html  webcam.html
src/: main.rs  router.rs  utils.rs
src/handlers/: audio.rs  chat.rs  file_system.rs  func.rs  keylogger.rs  mod.rs  remote_cmd.rs  remote_code_execution.rs  remote_screen.rs  task_manager.rs  trolling.rs  webcam.rs
