[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.23.0"
tokio = { version = "1.39.1", features = ["full"] }
sysinfo = "0.31.2"
url = "2.5.2"
winapi = { version = "0.3.9", features = ["sysinfoapi", "winbase", "winnt", "winreg", "minwindef"] }
scrap = "0.5.0"
lazy_static = "1.5.0"
#opencv = "0.92.2"
win_desktop_duplication = "0.10.11"

