[package]
name = "client"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = true      #deletes debuginfo
lto = true        # can change code structure, usable for anti-AV
codegen-units = 1 # more aggressive optimizations
panic = "abort"   #no info when panicking

[features]
default = ["dev-logs"]
dev-logs = []

[dependencies]
nokhwa = { version = "0.10.9", features = ["input-native"] }
tokio = { version = "1.39.1", features = ["full"] }
sysinfo = "0.31.2"
url = "2.5.2"
# winapi = { version = "0.3.9", features = [
#     "sysinfoapi",
#     "winbase",
#     "winnt",
#     "winreg",
#     "minwindef",
# ] }
lazy_static = "1.5.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-tungstenite = { version = "0.23.0", features = [
    "rustls-tls-native-roots",
] }
futures-util = { version = "0.3.30", features = ["sink"] }
async-trait = "0.1.88"
async-recursion = "1.1.1"
image = "0.25.6"

scap = { git = "https://github.com/hagz0r/scap", branch = "windows-capture-fix-merge-pls" }
